--- a/assets/scss/_themes.scss
+++ b/assets/scss/_themes.scss
@@ -5,6 +5,8 @@ $themes: (
         baseBorder: rgba(0, 0, 0, 0.125),
         secondaryColorDark: #555,
         secondaryColorLight: #fff,
+        subNavSecondaryColorDark: #000,
+        subNavSecondaryColorLight: #fff,
         panelBackgroundColor: #fff,
         panelTextColor: #000,
         panelSecondaryBackgroundColor: rgba(255, 255, 255, 0.95),
@@ -14,6 +16,7 @@ $themes: (
         toolsColorActive: #ffdd00,
         appEntryBoxBackground: #f5f5f5,
         appEntryBoxActiveTabBg: #e7e7e7,
+        toolsBackgroundNav: #263238,
     ),
     modern: (
         baseColorDark: #263238,
@@ -21,6 +24,8 @@ $themes: (
         baseBorder: rgba(0, 0, 0, 0.125),
         secondaryColorDark: #607d8b,
         secondaryColorLight: #ECEFF1,
+        subNavSecondaryColorDark: #263238,
+        subNavSecondaryColorLight: #ECEFF1,
         panelBackgroundColor: #fff,
         panelTextColor: #000,
         panelSecondaryBackgroundColor: rgba(236, 239, 241, 0.95),
@@ -30,6 +35,7 @@ $themes: (
         toolsColorActive: #ffdd00,
         appEntryBoxBackground: #f1f4f5,
         appEntryBoxActiveTabBg: #e2e4e4b0,
+        toolsBackgroundNav: #263238,
     ),
     classic: (
         baseColorDark: rgb(54, 45, 40),
@@ -37,6 +43,8 @@ $themes: (
         baseBorder: rgba(0, 0, 0, 0.125),
         secondaryColorDark: rgb(143, 119, 106),
         secondaryColorLight: rgb(245, 234, 212),
+        subNavSecondaryColorDark: rgb(54, 45, 40),
+        subNavSecondaryColorLight: rgb(245, 234, 212),
         panelBackgroundColor: #fff,
         panelTextColor: #000,
         panelSecondaryBackgroundColor: rgba(236, 239, 241, 0.95),
@@ -46,6 +54,26 @@ $themes: (
         toolsColorActive: #ffdd00,
         appEntryBoxBackground: #f9f7f5,
         appEntryBoxActiveTabBg: #f2ede9,
+        toolsBackgroundNav: rgb(54, 45, 40),
+    ),
+    metro: (
+        baseColorDark: #1e1e1e,
+        baseColorLight: white,
+        baseBorder: #ff3b3d,
+        secondaryColorDark: #1e1e1e,
+        secondaryColorLight: #ff3b3d,
+        subNavSecondaryColorDark: #ff3b3d,
+        subNavSecondaryColorLight: white,
+        panelBackgroundColor: #fff,
+        panelTextColor: #000,
+        panelSecondaryBackgroundColor: rgba(236, 239, 241, 0.95),
+        toolsBackground: white,
+        toolsColor: #1e1e1e,
+        toolsBackgroundDarker: #ffbfc0,
+        toolsColorActive: #ff5052,
+        appEntryBoxBackground: #ff5052,
+        appEntryBoxActiveTabBg: white,
+        toolsBackgroundNav: #1e1e1e,
     ),
 );
 
